--- a/src/main/resources/items/blocks/example_birthday_cake.yml
+++ b/src/main/resources/items/blocks/example_birthday_cake.yml
@@ -1,18 +1,18 @@
-# Birthday Cake - Un gâteau d'anniversaire magique qui se régénère
+# Birthday Cake - A magical birthday cake that regenerates
 id: "birthday_cake"
 material: CAKE
-display-name: "<gradient:#FFB6C1:#FF69B4><bold>🎂 Gâteau d'Anniversaire Magique</bold></gradient>"
+display-name: "<gradient:#FFB6C1:#FF69B4><bold>🎂 Magical Birthday Cake</bold></gradient>"
 lore:
-  - "<gray>Un délicieux gâteau qui ne finit jamais..."
+  - "<gray>A delicious cake that never ends..."
   - ""
-  - "<light_purple>✨ Propriétés magiques:"
-  - "  <pink>• Toujours 3 parts disponibles"
-  - "  <pink>• Régénération instantanée"
+  - "<light_purple>✨ Magical properties:"
+  - "  <pink>• Always 3 slices available"
+  - "  <pink>• Instant regeneration"
   - ""
-  - "<gold>🎉 Parfait pour les fêtes!"
+  - "<gold>🎉 Perfect for parties!"
 custom-model-data: 3001
 metadata:
   block-data:
     settings:
       cake:
-        bites: 3  # Déjà mangé 3 fois sur 6
+        bites: 3  # Already eaten 3 times out of 6
