--- a/src/main/resources/items/blocks/example_supercharged_redstone.yml
+++ b/src/main/resources/items/blocks/example_supercharged_redstone.yml
@@ -1,18 +1,18 @@
-# Supercharged Comparator - Comparateur de redstone surpuissant
+# Supercharged Comparator - Supercharged redstone comparator
 id: "supercharged_comparator"
 material: COMPARATOR
-display-name: "<gradient:#FF0000:#8B0000><bold>⚡ Comparateur Surpuissant</bold></gradient>"
+display-name: "<gradient:#FF0000:#8B0000><bold>⚡ Supercharged Comparator</bold></gradient>"
 lore:
-  - "<gray>Un comparateur modifié par la magie rouge"
+  - "<gray>A comparator modified by red magic"
   - ""
-  - "<light_purple>⚡ Caractéristiques:"
-  - "  <red>• Puissance maximale (15/15)"
-  - "  <gold>• Mode soustracteur"
-  - "  <aqua>• Surcharge arcanique"
+  - "<light_purple>⚡ Characteristics:"
+  - "  <red>• Maximum power (15/15)"
+  - "  <gold>• Subtract mode"
+  - "  <aqua>• Arcane overcharge"
   - ""
-  - "<gold>🔧 Pour les maîtres de la redstone"
+  - "<gold>🔧 For redstone masters"
   - ""
-  - "<dark_gray>Attention: Peut causer des explosions dimensionnelles"
+  - "<dark_gray>Warning: May cause dimensional explosions"
 custom-model-data: 3006
 metadata:
   block-data:
